# simple_serving_benchmark

./: .gitignore  README.md  compile_stats.py  load_test.sh  prompt.txt  report.lua  run_stats.csv  wrk_it.sh
go/: go_test_http_server.go
java/: java_test_http_server.java  kotlin_test_http_server.kt
python/: python_fastapi_test_http_server.py  python_fastapi_uvicorn_test_http_server.py  python_sanic_test_http_server.py  python_test_http_server.py  python_uvicorn_test_http_server.py  requirements.txt
rust/: Cargo.toml  rust_test_http_server.rs
test_output/: output_bun_typescript_test_http_server_test_http_server.json  output_go.json  output_java_test_http_server.json  output_kotlin_test_http_server.json  output_npx_typescript_test_http_server_test_http_server.json  output_python_fastapi_uvicorn_test_http_server.json  output_python_sanic_test_http_server.json  output_python_test_http_server.json  output_python_uvicorn_test_http_server.json  output_rust_test_http_server.json  output_zig2_test_http_server_test_http_server.json  output_zig_http_server.json
typescript/: package-lock.json  typescript_test_http_server.ts
zig/: build.zig.zon
zig/src/: main.zig
