[package]
name = "rust_test_http_server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "rust_test_http_server"
path = "rust_test_http_server.rs"